--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="392GIpSzIoBH57RYYKjyJuEO7heePG5yjw1kiPi/Fm37wq0nd2qa8i1kxNlHvGyQuy5plg6C4lELfy+IXq8PNHthT9t7wtPQ1RBcmgxY33y9605uAzlKannQfZChoLl7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="V6AHYefQp5AV2b35fU4iwFHaDlMMBnChIM567KWkpghK2WCvo4/sJgJx10D9VS33ltmyAhoBS4UY+Mqn/bsH/pJi7jfhk7pUs1f0wQtfZwdKRZgg0Am8Ojt1cCJmrPUL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
