--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IDA9161yxaYvuCEfvfrCghjoB1pXzLS4DMJ/GT0MaVknnnYeZS9peJsvvFdPXcmbSt5rK47wJBDbCoI/mBHLDDWONxPg5Nx9BxjPcjZybB8fRgcsHQaIrEbukDoznq35">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MPNd6XHUGKWvGuiXazTmSHY0wGFER6aQDgQWuptHZA+p+pwZsPdTLcSfIQvLHNcFlxve2cvMtDSPvJ5APdC+2ZzJeIX8khXkEdKzix6VfhnKcNWJaEX1oAKBL9d2ooI/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
