--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="header11 cid-r9p0bbTBps" id="header11-6u">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -92,7 +92,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MzCdTcVqRrCcsEpcPye8wsVLTKAlQ6slFBwT0dKGI2NYqXg0zowGXXSIja8/kkchLFHwkkvelVTATezcfoiDOSJ3x95qGGYjqJBfl69U3NpCHPJT63CQSI9o6s6RiD8v">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JWmrzaIvq7pBhmUEFRPnGNuH9DUrbozkAYxeD+vIXvrtc81GWrhi1c1u4qVDJSBLC/4m8bg75OcrxdRBHB0hI8Rhq6ul0iCbM8WnZpO1sQiVbIjMt3VU7BhdPkQBHG5b">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-70">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -205,10 +205,10 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">It goes without saying that keeping yourself and your family healthy through the winter in Michigan can be a challenge. When you combine chillier temps, housebound days, year-end deadlines and the holidays - not to mention kids passing around colds at school and then at home over holiday break like they’re playing “Hot Potato” - you can end up spending January under the covers.
-<div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>It goes without saying that keeping yourself and your family healthy through the winter in Michigan can be a challenge. When you combine chillier temps, housebound days, year-end deadlines and the holidays - not to mention kids passing around colds at school and then at home over holiday break like they’re playing “Hot Potato” - you can end up spending January under the covers.</p><p>
+</p><div>
 </div><div>No matter how many inherent seasonal risk factors you face, there are ways to prepare for and get through the season virtually unscathed. At Barrett Insurance, we wish for you a happy and abundantly healthy new year, so here are a few tips to help you stay well and enjoy!
-</div><div><br></div></div>
+</div><div><br></div><p></p></div>
         </div>
     </div>
 </section>
