--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SH1Sa6bFc8xS4fGpUdeDTy5LenH5xHaQI82ZEjwcBUUf0J7SNcKbgCDsaUXjhXaiyqxG2wflQMFwdsOpwBkCjtsqkbFT1FX+ARVps93qFoG2JNvA0TXnCxNi1ogy/mnP">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A3fbmXep2OyZyRhC36TI9pmYrXF3P0U8MgBVurAihsjbO7rC4kAH2BmnXSU0xrCEiF+rhqDHwUSG+rhIfmaP7tBTdGvoOMKdo65CwaupmD9vrQr4GuXLuTrp+khQSQJo">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
