--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d7ZoL2eSL+gdP6iLwA1j9zJgmvKySlq5ky9m1cjZkICVm4C+oZ3Cf0KBagiOFNXKWeRTmWM6nlg+AwijUaLbrbbBGOIDXLY1/MVMG1/O12iLpcM2ysAWnYeCQdNobaes">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JGYW38lqc4TzPAD6c/vyiEMRPSgAuZv1zG4hMBuPLLUMSPra/xRfj+1gHvOZv1uJld7irr3kWh+9yggIJ7pv8OtyrSkzbpN6nnU1JPT5KLSHHT406OVaNKEpWaMplcvZ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
