--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nwYlqTwPZi4X56Rltx+ZqV3+gjgDebxeoFXUO65kTfBY6r8PKg/Ttoq9hvAjnII6HqLnI+zkWFyrGLtJ+P9o4yoLLOdkmXK+jILIJHgSb9tou01HASZQU2SlCGCujasz">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OK4ZRCLvFVB5MGs+gAQkBx0ukPBJBxWW+jtw3K+hBI1GMAkEQqgA1cYwRUpF9i0Q0X2U0m0O5jXRRB6ZZnTOu1eba29euGeLpF6lqcci5VBdfFMu1BI2G0chAMZ3hdEL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
