--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -126,35 +126,35 @@
             <div class="media-container-row">
                     <div class="toggle-content">
                         <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-5"><strong>Student of the Week&nbsp;</strong><strong>Award of Excellence</strong><br></h2>
-                        <h3 class="mbr-section-subtitle align-left mbr-fonts-style display-7"><div>Congratulations to this week’s recipient, Grace Ollinger</div></h3>
+                        <h3 class="mbr-section-subtitle align-left mbr-fonts-style display-7"><div>Congratulations to this week’s recipient, Alyssa Phillips!</div></h3>
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_144" aria-expanded="false" aria-controls="collapse1">
-                                        <h4 class="mbr-fonts-style display-7">About Grace</h4>
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_26" aria-expanded="false" aria-controls="collapse1">
+                                        <h4 class="mbr-fonts-style display-7">About Alyssa</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_144" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_26" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
-                                        <p class="mbr-fonts-style panel-text display-7">Grace is a senior at Hillsdale High School. She is also an avid musician and plays trumpet for the Jazz Band, Symphonic Band, Marching Band, and Pep Band. Grace plays drums and bass guitar at her church’s Worship Band. She remains active in National Honor Society and Business Professionals of America. Grace is co-captain for the HHS Varsity Girls’ Tennis Team. She is also dual-enrolled at Jackson College.
+                                        <p class="mbr-fonts-style panel-text display-7">Congratulations to the first recipient of the Barrett Insurance Student of the Week Award of Excellence for 2019, Alyssa Phillips!
 <br>
-<br>According to HHS Band teacher, Dr. Rushing, ‘Grace is not looking for recognition. She wants to help and is behind the scenes working and helping others. Grace is an excellent student, athlete, and musician.’
+<br>Alyssa is a senior at Will Carleton Academy. She remains active in 4-H, basketball, cross country, and track &amp; field. 
 <br>
-<br>Following graduation, Grace plans to attend Huntington University to study animal science.
+<br>According to science teacher, Jason Coward, "She works as hard in the classroom as she does on the court. As an athlete, she works hard to be her very best from start to finish. She is a great example of a leader and a person that is always there to foster young athletes at WCA. She will be an asset to the community, and a solid citizen for others to admire."
 <br>
-<br>Congratulations, Grace!
+<br>Following graduation, Alyssa plans to attend college to go into a pre-veterinarian program. She also plans to continue her career in cross-country and track &amp; field as a college student-athlete. 
 <br>
-<br>Keep up your great work.<br></p>
+<br>Congratulations, Alyssa!<br></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_144" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_26" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">About the Program</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_144" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_26" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">At Barrett Insurance we believe education is critical. To show this commitment to education, we developed the Barrett Insurance "Student of the Week Award of Excellence." This award started in the fall of 2015 to honor our local students. We continue to highlight and feature select students from around the region to showcase their scholastic acumen and their impressive achievements. 
 <br>
@@ -166,18 +166,18 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_144" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_26" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Past Recipients</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_144" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_26" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7"><strong>(in alphabetical order by first name)</strong> 
 <br>
 <br>Alexis Higgins
 <br>Allyson Rubley
-<br>Alyssa Forbes 
-<br>Angelee Coleman 
+<br>Alyssa Forbes <br>
+Alyssa Phillips<br>Angelee Coleman 
 <br>Ashley Stead 
 <br>Cecilia Mende 
 <br>Dale Wagner <br>
@@ -212,11 +212,11 @@ Michael Rhoades<br>Olivia Bambacht
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_144" aria-expanded="false" aria-controls="collapse4">
+                                    <a role="button" class="collapsed panel-title  text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse4_26" aria-expanded="false" aria-controls="collapse4">
                                         <h4 class="mbr-fonts-style display-7">Participating Schools</h4>
                                     </a>
                                 </div>
-                                <div id="collapse4_144" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse4_26" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Camden-Frontier, 
 <br>Jonesville 
@@ -231,8 +231,8 @@ Waldron<br>Will Carleton Academy</p>
                             
                         </div>
                     </div>
-                <div class="mbr-figure" style="width: 36%;">
-                     <img src="assets/images/47571864-2314462965290978-6189144712163622912-n-590x886.jpg" alt="Mobirise" title="">
+                <div class="mbr-figure" style="width: 41%;">
+                     <img src="assets/images/49712266-2382668211803786-3122991388027781120-n-486x648.jpg" alt="Mobirise" title="">
                 </div>
             </div>
         </div>
@@ -251,11 +251,11 @@ Waldron<br>Will Carleton Academy</p>
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_145" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse1_27" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-7">About the Program</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_145" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_27" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">The Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project brings together local youth and adults to document Michigan's traditional barn structures. We want to increase youth awareness of the rich agricultural history of the area and preserve it for generations to come.<br><br>Barrett Insurance is working on this survey in conjunction with the Michigan Barn Preservation Network and Michigan State University. The survey will be available at the Michigan State University Museum. &nbsp;<br></p>
                                     </div>
@@ -263,11 +263,11 @@ Waldron<br>Will Carleton Academy</p>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_145" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse2_27" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-7">Seeking Partners</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_145" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_27" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Barrett Insurance needs your help. If you are willing to drive around, commit to surveying a one square mile area from the comfort of your vehicle and completing our specially designed ‘windshield survey,' (which allows us to documents barns and farmsteads without entering private property) then give us a call today to find out how you can help preserve these undocumented treasures and the legacy of our area.
 <br>
@@ -277,11 +277,11 @@ Waldron<br>Will Carleton Academy</p>
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_145" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-parent="#accordion" data-core="" href="#collapse3_27" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-7">Get Involved</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_145" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_27" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">If you would like to get involved with the Clint Barrett Memorial South Central Michigan Barn and Farmstead Survey Project, call Barrett Insurance at (517) 849-1000.</p>
                                     </div>
