create github pages

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -457,7 +457,7 @@ Specializing in Home, Auto &amp; Commercial Insurance</h3>
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Phone:</strong> (517) 849-1000 
 <br>
-<br><strong>E-Mail:</strong>&nbsp;aron@barrettins.com 
+<br><strong>E-Mail:</strong>&nbsp;aaron@barrettins.com 
 <br>
 <br>Click <a href="aaron.html">here</a> to send Aaron an e-mail!</p>
                                 </div>
