--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
