--- a/ben.html
+++ b/ben.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b188NrLB2e1pfguiyR5cmK60tl9GtTldpzZJJYWroe8Rzde7nzoqoa2F/a+XnBACqdRs/4uL8tp/VaQcB3jLPeVKgOc71vdSJR+vvfTxRmEHLH4X5a4xLxgbeYGqsPcI">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rXeyUgY+36ZUC8qIYZ6ZAhBS6dWSJwwmhAKoz0zX5Nq4DjFIdeNC3LCD6AZR870owYjRO1WIMRe9xdD6eRSrpTSWbWsBKvYnexXonkx8NFNWolNTUiVL5YSVgwV92EmH">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
