--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top collapsed">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -239,7 +239,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sQaZ/23BRNaxMsrN3g47+nhhjeT8rQJoHoDRY+VacjFBHhSSfsN68+URJSk5D50chxERUcmcYmET6ynL1DNWOO4WXwxEd+m5ljHQjBj5+HV0Osjv3/4Gx+KQ7PHpXaKI">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zEIK+NBJc4+twLfjnh7iS9kr5JFYkjD8k48qEC1HYYolJ9QQl+tyNDG/o9O6vn3TpNOUf7eZQKGIc8IlkM39UsBNbnDLglIXPELOa7cW2oCnHMkYBkEOuHAYXaU3Wsdf">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -310,7 +310,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IXLcFp8lavJRUAXfyvY+fAQx8WI/Y3I9bH/MEDY5zyQTLpgWDL3KPmFlJ9uA4ghAPpWoERVkG6snFsQY0dyrn/ddJCTDKXpao2odVQZGNgAiqSTc694qVCd0Yzleb+20">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rBPZHodXRA3cKM8dSTTDBdG6e45yRt1/H3PJIwSMw775Mj7FAtJwrNK0syOp4QZKcsT+xQJFVdSEskDu1HR31OzilWp/24Xug51k2XPZhdH5AzOVxEAvTgUzFyQMKutP">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
