create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DNS0VHiZwg+FRw5HIQnQ3miiSE/u8p/leHUJh8b93/yWB/36yEH5gdp/aJGQuphcL0Q7VGzx9nPiZDBcqz6quSkc8a7SxSrGBXgna4B92QL7Fhe4pjqZgnF6qiLL976Z">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UjaAAXyPLkdO7sMWKrv9d+GdEcxsxINClxxoR+/BlLfwFrHgM2c6jjftZXLmYO3YbVCqgnB1L34V45q0wnL0E8WeOrlmu//9hATqKul2neCKGVdle/H20AQO3V8zV+o2">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
