--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oEg1whso+9E8LUY9+UBjJd30Vgre9hkBu/Bv3t16puHzkSlZjkuLq2XUPkyu1hakW1v9/MNTYXQF6vBsQEnnrxAt2NtJGMqOOOQiOeERAxHTX/EqQ7oOwW+EdyRh8kWh">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EIivjuj1FJ3m0sZfxxL4JOE96EZzZERgjW03iTPRQKVA/lCfy0/y9isGzLqDMy9ohKMse5NVMVVlCmShNGEIUt0/3KPFGKvGe8lsN8X9oFAyZXLCAf9YQmukGvMs30AI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
