--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="faKNBi8lXbC+1B9EWof5jm2PpzPWsOF9o2TP9k18HCQtMCpTfAAn5KKE1ZO9h7mOG+ViHm0S2ljt9xuff8PP5K2oHeGY6FxB7wOxJNc/5jdjXtve+jEE7RVcHBvSg1j2">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wjhwaAtZF7a/mVj6pvacoYNMNiSQxyawKEl+01h/3+qcmhvSxJvK/BlVA1KBtGaiUL5q1gx9o0CUogjX6zSA3l05KOrAmoJvV9Wd5+6waANren7R2C7RiSkt2FWOSC9v">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
