--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="d5K0ygoMmsCLDUcCfg9QIISH/5uADsL2LAsY4GrWOyFStJd/VNSy/tOzq9tL3/K7xGviiA68KCwbQQYt3ty4YfNj/SsykRh8ZiKW45e+T9m4V74PdtREeb+mPRSawP8F">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ar0WCOEuhh98++z66cL8ytvxaYwLNTCYRKdwmT+t5UzvmQAOzuU6y/fpH6cwZqvl7eSznAew8/ysh874mBhxANLVqHTho3NHb+PwpMH3bSDoUf09B8Nuda1z7rs/SnY6">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
