create github pages

--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="s8Bnn9wVaXSIt4DGho0/EhSLxwcHRheVTyboMQd2SYCgQozqXT4YB2jpSvIlTW+OykJSdVOCj5kuYubFxeHE7/L2kJ5uQwzN9Zjlpvl7km5WiRd9TD2zMr1a0xrd7MSQ">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N3BHyskKbSUnxF4HIwICiKtPXlcvc7DkyPxU0RkD7OuAHMpfYkzCVIfACN/iLANfyYz+ivkCuaQmXTj7MR5NhR1OGIA0LfiX77D2G1TSd6sUppV7T6gnrNgMzNmXzHEK">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
