--- a/newsletter.html
+++ b/newsletter.html
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -150,14 +150,14 @@
                     
                 </div>
                 <div class="clearfix"></div>
-                <div id="bootstrap-accordion_55" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_142" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_55" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-core="" href="#collapse1_142" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="mbr-fonts-style display-7">What do farmers get their wives for Valentine's Day?</h4>
                             </a>
                         </div>
-                        <div id="collapse1_55" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_55">
+                        <div id="collapse1_142" class="panel-collapse noScroll collapse " role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_142">
                             <div class="panel-body p-4">
                                 <p class="mbr-fonts-style panel-text display-7">Hogs and Kisses</p>
                             </div>
